Agregar controladores y paginas publicas de vistas de fundaciones y las mascotas que tengan la opcion de adoptar
Agregar la opcion de poder transferir perfil de mascota adoptada a tutor